demo 7: small updates (mostly aesthetic)

--- a/demos/07_data_exploration_and_visualisation.ipynb
+++ b/demos/07_data_exploration_and_visualisation.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data exploration and visualisation"
+    "# NTDS demo 7: data exploration and visualisation\n",
+    "\n",
+    "Based on [exercises from the 2016 edition of NTDS](https://github.com/mdeff/ntds_2016)."
    ]
   },
   {
@@ -13,12 +15,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "%matplotlib inline\n",
+    "\n",
     "import sys\n",
-    "import os.path\n",
-    "import pandas as pd\n",
+    "import os\n",
     "import warnings\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
     "warnings.filterwarnings('ignore')"
    ]
   },
@@ -60,9 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data.iloc[:5, 4:10]"
@@ -87,9 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data[:1000].to_html('subset.html')"
@@ -253,7 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import scipy.stats as stats\n",
+    "from scipy import stats\n",
     "_, p, _, expected = stats.chi2_contingency(observed.iloc[:2,:2])\n",
     "print('p-value = {:.2e}'.format(p))\n",
     "print('expected values:\\n{}'.format(expected))"
@@ -263,8 +264,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Intuition**: people who pay late present a higher risk of defaulting. Let's verify !\n",
-    "Verifying some intuitions will also help you to identify mistakes. E.g. it would be suspicious if that intuition is not verified in the data: did we select the right column, or did we miss-compute a result ?"
+    "**Intuition**: people who pay late present a higher risk of defaulting. Let's verify!\n",
+    "Verifying some intuitions will also help you to identify mistakes. E.g. it would be suspicious if that intuition is not verified in the data: did we select the right column, or did we miss-compute a result?"
    ]
   },
   {
@@ -344,7 +345,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.1 Simple visualisation"
+    "### 4.1 Time series"
    ]
   },
   {
@@ -363,6 +364,7 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "# Random time series.\n",
     "n = 1000\n",
     "rs = np.random.RandomState(42)\n",
@@ -383,9 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "idx = pd.date_range('1/1/2000', periods=n)\n",
@@ -394,24 +394,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.2 Frequency\n",
+    "\n",
+    "A frequency plot is a graph that shows the pattern in a set of data by plotting how often particular values of a measure occur. They often take the form of an [histogram](https://en.wikipedia.org/wiki/Histogram) or a [box plot](https://en.wikipedia.org/wiki/Box_plot).\n",
+    "\n",
+    "[Seaborn](http://seaborn.pydata.org/) is a statistical visualization library based on matplotlib. It provides a high-level interface for drawing attractive statistical graphics. Its advantage is that you can modify the produced plots with matplotlib, so you loose nothing."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import seaborn as sns\n",
-    "import os\n",
     "df = sns.load_dataset('iris', data_home=os.path.join('..', 'data'))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, axes = plt.subplots(1, 2, figsize=(15, 5))\n",
@@ -427,6 +433,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 4.3 Correlation\n",
+    "\n",
     "[Scatter plots](https://en.wikipedia.org/wiki/Scatter_plot) are very much used to assess the correlation between 2 variables. Pair plots are then a useful way of displaying the pairwise relations between variables in a dataset.\n",
     "\n",
     "Use the seaborn `pairplot()` function to analyze how separable is the iris dataset."
@@ -445,7 +453,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.2 Dimensionality reduction\n",
+    "### 4.4 Dimensionality reduction\n",
     "\n",
     "Humans can only comprehend up to 3 dimensions (in space, then there is e.g. color or size), so [dimensionality reduction](https://en.wikipedia.org/wiki/Dimensionality_reduction) is often needed to explore high dimensional datasets. Analyze how separable is the iris dataset by visualizing it in a 2D scatter plot after reduction from 4 to 2 dimensions with two popular methods:\n",
     "1. The classical [principal componant analysis (PCA)](https://en.wikipedia.org/wiki/Principal_component_analysis).\n",
@@ -459,9 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.decomposition import PCA\n",
@@ -471,9 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pca = PCA(n_components=2)\n",
@@ -503,22 +507,20 @@
    "metadata": {},
    "source": [
     "## 5 Graph visualisation\n",
-    "You've already worked with Networkx to make basic graph plots. Other useful resources include Gephi which allows for a nicer and more artistic approach (https://gephi.org/) and Plotly (https://plot.ly/python/network-graphs/), useful for data visualisation as well as graph drawing."
+    "You've already worked with Networkx to make basic graph plots. Other useful resources are [Gephi](https://gephi.org/), which allows for a nicer and more artistic approach, and [Plotly](https://plot.ly/python/network-graphs/), useful for data visualisation as well as graph drawing."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import networkx as nx\n",
-    "import scipy\n",
-    "import scipy.stats as st\n",
+    "%matplotlib notebook\n",
+    "\n",
     "import time\n",
-    "%matplotlib notebook"
+    "import networkx as nx\n",
+    "import scipy"
    ]
   },
   {
@@ -529,8 +531,8 @@
    "source": [
     "n = 20\n",
     "T = 50\n",
-    "er=nx.erdos_renyi_graph(20,0.3)\n",
-    "er.remove_nodes_from(nx.isolates(er)) #removing isolated nodes\n",
+    "er = nx.erdos_renyi_graph(20,0.3)\n",
+    "er.remove_nodes_from(nx.isolates(er))  # removing isolated nodes\n",
     "n = len(er)\n",
     "nx.draw(er)"
    ]
@@ -539,14 +541,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Time series data can also live on the nodes of our graph (eg. temperatures in cities). Create random time series data for our graph and plot the on a graph with node size representing the signal value."
+    "Time series data can also live on the nodes of our graph (e.g. temperatures in cities). Create random time series data for our graph and plot them on a graph with node size representing the signal value."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also experiment with different layouts for drawing the graph. The default layout positions nodes using the Fruchterman-Reingold force-directed algorithm (spring layout: https://en.wikipedia.org/wiki/Force-directed_graph_drawing). Draw the graph using the spectral layout."
+    "You can also experiment with different layouts for drawing the graph. The default layout positions nodes using the Fruchterman-Reingold [force-directed algorithm](https://en.wikipedia.org/wiki/Force-directed_graph_drawing) (spring layout). Draw the graph using the spectral layout."
    ]
   },
   {
@@ -556,15 +558,13 @@
    "outputs": [],
    "source": [
     "sigma_eps = 1;\n",
-    "epsilon = st.norm.rvs(scale = sigma_eps, size=[n,T]) #noise"
+    "epsilon = stats.norm.rvs(scale = sigma_eps, size=[n,T])  # noise"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def draw_graph_time_series(x):\n",
@@ -573,7 +573,7 @@
     "\n",
     "    fig.show()\n",
     "    fig.canvas.draw()\n",
-    "    pos=nx.spectral_layout(er) #we have to fix the position of nodes\n",
+    "    pos = nx.spectral_layout(er)  # we have to fix the position of nodes\n",
     "\n",
     "    l = 0\n",
     "    for i in range(0,T):\n",
@@ -590,8 +590,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib notebook\n",
-    "%matplotlib notebook\n",
     "draw_graph_time_series(epsilon)"
    ]
   },
@@ -617,13 +615,13 @@
     "            peak[source[l]][l] = 1\n",
     "            event = np.dot(scipy.linalg.expm((t[l]-i)*Lapl), peak[:,l])\n",
     "            x[:,i] = x[:,i] + 50*event\n",
-    "            l=l+1\n",
+    "            l += 1\n",
     "            if l >= 2:\n",
     "                break\n",
     "    return x\n",
     "\n",
     "t = [10, 30]\n",
-    "source = st.randint.rvs(low=0, high=n, size=2)"
+    "source = stats.randint.rvs(low=0, high=n, size=2)"
    ]
   },
   {
@@ -640,9 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def draw_graph_diffusion(x):\n",
@@ -678,25 +674,7 @@
    ]
   }
  ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.2"
-  }
- },
+ "metadata": {},
  "nbformat": 4,
  "nbformat_minor": 1
 }
