--- a/demos/07_data_exploration_and_visualisation.ipynb
+++ b/demos/07_data_exploration_and_visualisation.ipynb
@@ -6,13 +6,15 @@
    "source": [
     "# NTDS demo 7: data exploration and visualisation\n",
     "\n",
-    "Based on [exercises from the 2016 edition of NTDS](https://github.com/mdeff/ntds_2016)."
+    "Michael Defferrard and Hermina Petric Maretic, based on [exercises from the 2016 edition of NTDS](https://github.com/mdeff/ntds_2016)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -37,7 +39,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "filename = os.path.join('..', 'data', 'credit_card_defaults.csv')\n",
@@ -90,7 +94,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data[:1000].to_html('subset.html')"
@@ -150,10 +156,7 @@
    "outputs": [],
    "source": [
     "print(data['EDUCATION'].value_counts())\n",
-    "data.loc[data['EDUCATION']=='UNK1', 'EDUCATION'] = 'UNK'\n",
-    "data.loc[data['EDUCATION']=='UNK2', 'EDUCATION'] = 'UNK'\n",
-    "data['EDUCATION'] = data['EDUCATION'].cat.remove_unused_categories()\n",
-    "print(data['EDUCATION'].value_counts())"
+    "#your code here"
    ]
   },
   {
@@ -220,7 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "percentage = data['DEFAULT'].value_counts()[1] / data.shape[0] * 100\n",
+    "#your code here\n",
     "print('Percentage of defaults: {:.2f}%'.format(percentage))"
    ]
   },
@@ -291,7 +294,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Back to numeric values.\n",
@@ -407,7 +412,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import seaborn as sns\n",
@@ -467,7 +474,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.decomposition import PCA\n",
@@ -477,7 +486,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pca = PCA(n_components=2)\n",
@@ -513,7 +524,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib notebook\n",
@@ -554,7 +567,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sigma_eps = 1;\n",
@@ -564,15 +579,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def draw_graph_time_series(x):\n",
-    "    fig, ax = plt.subplots()\n",
-    "    plt.ion()\n",
-    "\n",
-    "    fig.show()\n",
-    "    fig.canvas.draw()\n",
     "    pos = nx.spectral_layout(er)  # we have to fix the position of nodes\n",
     "\n",
     "    l = 0\n",
@@ -590,6 +602,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fig, ax = plt.subplots()\n",
+    "plt.ion()\n",
+    "fig.show()\n",
+    "fig.canvas.draw()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "draw_graph_time_series(epsilon)"
    ]
   },
@@ -603,7 +629,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def create_x(Lapl):\n",
@@ -627,7 +655,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Lapl = nx.normalized_laplacian_matrix(er)\n",
@@ -638,30 +668,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def draw_graph_diffusion(x):\n",
-    "    fig = plt.figure()\n",
-    "    ax = fig.add_subplot(111)\n",
-    "    plt.ion()\n",
-    "\n",
-    "    fig.show()\n",
-    "    fig.canvas.draw()\n",
-    "    pos=nx.spring_layout(er)\n",
-    "    node_col = ['r'] * T\n",
-    "\n",
-    "    l = 0\n",
-    "    for i in range(0,T):\n",
-    "        ax.clear()\n",
-    "        if l<2:\n",
-    "            if i == t[l]:\n",
-    "                node_col[source[l]] = 'b'\n",
-    "                l = l+1\n",
-    "        nx.draw_networkx(er, ax=ax, node_color = node_col, pos=pos, node_size=x[:,i]*100)\n",
-    "        ax.text(0,0,i)\n",
-    "        fig.canvas.draw() \n",
-    "        time.sleep(0.1)"
+    "    #your code here"
    ]
   },
   {
@@ -670,11 +683,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(111)\n",
+    "plt.ion()\n",
+    "fig.show()\n",
+    "fig.canvas.draw()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "draw_graph_diffusion(x)"
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.2"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 1
 }
