lab 7 with solutions

--- a/demos/07_data_exploration_and_visualisation.ipynb
+++ b/demos/07_data_exploration_and_visualisation.ipynb
@@ -150,7 +150,10 @@
    "outputs": [],
    "source": [
     "print(data['EDUCATION'].value_counts())\n",
-    "#your code here"
+    "data.loc[data['EDUCATION'] == 'UNK1', 'EDUCATION'] = 'UNK'\n",
+    "data.loc[data['EDUCATION'] == 'UNK2', 'EDUCATION'] = 'UNK'\n",
+    "data['EDUCATION'] = data['EDUCATION'].cat.remove_unused_categories()\n",
+    "print(data['EDUCATION'].value_counts())"
    ]
   },
   {
@@ -217,7 +220,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here\n",
+    "percentage = data['DEFAULT'].value_counts()[1] / data.shape[0] * 100\n",
     "print('Percentage of defaults: {:.2f}%'.format(percentage))"
    ]
   },
@@ -274,6 +277,27 @@
     "group = data.groupby('DELAY1').mean()\n",
     "corr = data['DEFAULT'].corr(data['DELAY1'], method='pearson')\n",
     "group['DEFAULT'].plot(grid=True, title='Pearson correlation: {:.4f}'.format(corr), figsize=(15,5));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "group = data.groupby('AGE').mean()\n",
+    "group['LIMIT'].plot(grid=True, title='Mean credit card limit per age', figsize=(15,5));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "print(data['AGE'].value_counts())"
    ]
   },
   {
@@ -573,7 +597,7 @@
     "        nx.draw_networkx(er, ax=ax, pos=pos, node_size=x[:,i]*100)\n",
     "        ax.text(0,0,i)\n",
     "        fig.canvas.draw()\n",
-    "        time.sleep(0.01)"
+    "        time.sleep(0.03)"
    ]
   },
   {
@@ -646,7 +670,19 @@
    "outputs": [],
    "source": [
     "def draw_graph_diffusion(x):\n",
-    "    #your code here"
+    "    pos = nx.spring_layout(er)  # we have to fix the position of nodes\n",
+    "    node_col = ['r'] * T\n",
+    "    l = 0\n",
+    "    for i in range(0,T):\n",
+    "        ax.clear()\n",
+    "        if l<2:\n",
+    "            if i == t[l]:\n",
+    "                node_col[source[l]] = 'b'\n",
+    "                l = l+1\n",
+    "        nx.draw_networkx(er, ax=ax, node_color = node_col, pos=pos, node_size=x[:,i]*100)\n",
+    "        ax.text(0,0,i)\n",
+    "        fig.canvas.draw()\n",
+    "        time.sleep(0.03)"
    ]
   },
   {
