Revert "assignment 4: remove solutions"
This reverts commit acbbed9c6c9de36d557d6b053875e286091c6a88.

--- a/assignments/04_graph_signal_processing.ipynb
+++ b/assignments/04_graph_signal_processing.ipynb
@@ -107,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here."
+    "G.compute_laplacian('normalized')"
    ]
   },
   {
@@ -150,7 +150,7 @@
    "source": [
     "From the above plot, can you infer if the Fourier basis was computed from a combinatorial or normalized Laplacian?\n",
     "\n",
-    "**Your answer here.**"
+    "**Your answer here.** If the largest eigenvalue is larger than 2, then it was computed from a combinatorial Laplacian. If it's smaller than 2, then is probably a normalized Laplacian. But we cannot be sure."
    ]
   },
   {
@@ -171,7 +171,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here."
+    "G.set_coordinates(G.U[:, 1:3])\n",
+    "\n",
+    "G.plot(vertex_size=50)"
    ]
   },
   {
@@ -238,7 +240,8 @@
    "source": [
     "To observe how our kernel looks like in the node domain, we would like to localize it on node $i$. Given the Fourier basis $\\mathbf{U}$, the filter kernel $\\hat{g}(\\lambda)$, and the diagonal matrix of eigenvalues $\\mathbf\\Lambda$, what is the expression of the localized kernel $T_i g \\in \\mathbb{R}^N$?\n",
     "\n",
-    "**Your answer here.**\n",
+    "**Your answer here.** The signal is given by\n",
+    "$$T_i g = \\mathbf{U} \\hat{g}(\\mathbf{\\Lambda}) \\mathbf{U}^\\intercal \\delta_i.$$\n",
     "\n",
     "Now localize it at node $i=300$ and observe the result.\n",
     "\n",
@@ -255,7 +258,20 @@
    "source": [
     "NODE = 300\n",
     "\n",
-    "s =  # Your code here.\n",
+    "s = G.U @ np.diag(f.evaluate(G.e).squeeze()) @ G.U.T[:, NODE]\n",
+    "\n",
+    "# Alternative:\n",
+    "# s = np.zeros(G.N)\n",
+    "# s[NODE] = 1\n",
+    "# s = G.U @ np.diag(f.evaluate(G.e).squeeze()) @ G.U.T @ s\n",
+    "\n",
+    "# Alternative:\n",
+    "# s = np.zeros(G.N)\n",
+    "# s[NODE] = 1\n",
+    "# s = f.filter(s)\n",
+    "\n",
+    "# Alternative:\n",
+    "# s = f.localize(NODE)\n",
     "\n",
     "G.plot_signal(s, vertex_size=50, highlight=NODE)"
    ]
@@ -266,7 +282,7 @@
    "source": [
     "Intuitively, should the plotted graph signal be smooth?\n",
     "\n",
-    "**Your answer here.**\n",
+    "**Your answer here.** Yes, because the energy of the signal is concentrated in the low frequencies.\n",
     "\n",
     "Confirm your intuition by looking at the signal `s` in the Fourier domain. Compare with the graph Fourier transform (GFT) of a delta signal\n",
     "$$\\delta_i[j] =\n",
@@ -285,7 +301,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here."
+    "s0 = np.zeros(G.N)\n",
+    "s0[NODE] = 1\n",
+    "plt.plot(G.e, G.gft(s0));\n",
+    "\n",
+    "plt.plot(G.e, G.gft(s));"
    ]
   },
   {
@@ -331,6 +351,10 @@
     "What is the solution of this problem?\n",
     "\n",
     "**Your answer here.**\n",
+    "The optimal solution (by putting the derivative to zero) is given by:\n",
+    "$$\\mathbf{Mx}^\\ast - \\mathbf{y} + \\alpha \\mathbf{L x}^\\ast = 0\n",
+    "\\hspace{0.3cm} \\rightarrow \\hspace{0.3cm}\n",
+    "x^\\ast = (\\mathbf{M} + \\alpha \\mathbf{L})^{-1} \\mathbf{y}$$\n",
     "\n",
     "Implement it below.\n",
     "\n",
@@ -356,8 +380,14 @@
     "        x_pred: the predicted class\n",
     "        x_star: the solution of the optimization problem\n",
     "    \"\"\"\n",
-    "    \n",
-    "    # Your code here.\n",
+    "    M = np.diag(y != 0)\n",
+    "\n",
+    "    # Reconstruct.\n",
+    "    x_star = np.linalg.solve(M + alpha * G.L, y)\n",
+    "\n",
+    "    # Binarize.\n",
+    "    x_pred = np.ones(G.N)\n",
+    "    x_pred[x_star < 0] = -1\n",
     "\n",
     "    return x_pred, x_star\n",
     "\n",
@@ -410,7 +440,9 @@
     "alpha = 0.1\n",
     "\n",
     "for p in [0.1, 0.3, 0.5, 0.7, 0.9]:\n",
-    "    # Your code here.\n",
+    "    y = prepare_observations(p)\n",
+    "    x_pred, _ = solve(y, alpha)\n",
+    "    err = np.sum(np.abs(x - x_pred)) / G.N\n",
     "    print('{}: {:6.2%}'.format(p, err))"
    ]
   },
