demo 8: correct title

--- a/demos/08_pygsp.ipynb
+++ b/demos/08_pygsp.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NTDS demo 6: web APIs & data analysis with pandas\n",
+    "# NTDS demo 8: graph signal processing\n",
     "[Michaël Defferrard](http://deff.ch), *PhD student*, [EPFL](http://epfl.ch) [LTS2](http://lts2.epfl.ch)\n",
     "\n",
     "For this tutorial, we'll use the [PyGSP](https://github.com/epfl-lts2/pygsp), a Python package to ease signal processing on graphs.\n",
