assignment 3: save graph for ass4

--- a/assignments/03_spectral_graph_theory.ipynb
+++ b/assignments/03_spectral_graph_theory.ipynb
@@ -601,6 +601,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Saving the graph for the fourth assignment.\n",
+    "w = sparse.csr_matrix(weights)\n",
+    "sparse.save_npz('../data/fma_graph.npz', w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "indices = np.argsort(tracks['genre'])\n",
     "tracks = tracks.iloc[indices]\n",
     "features = features.iloc[indices]\n",
