demo 8: similarity graph from features

--- a/demos/08_pygsp.ipynb
+++ b/demos/08_pygsp.ipynb
@@ -90,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.1 Custom graphs and properties"
+    "### 1.1 Custom graphs and properties"
    ]
   },
   {
@@ -127,7 +127,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.1 Exercise: layout\n",
+    "Alternatively, we can construct a similarity graph $\\mathbf{W} \\in \\mathbb{R}^{N \\times N}$ from node features $\\mathbf{X} = [\\mathbf{x}_1, \\ldots, \\mathbf{x}_N]^\\intercal \\in \\mathbb{R}^{N \\times d}$ and a kernel $k(\\cdot, \\cdot)$, such as\n",
+    "$$\\mathbf{W}[i,j] = k(\\mathbf{x}_i, \\mathbf{x}_j).$$\n",
+    "\n",
+    "The kernel is often defined as the Gaussian kernel\n",
+    "$$k(\\mathbf{x}_i, \\mathbf{x}_j) = \\exp \\left(-\\frac{d^2(\\mathbf{x}_i, \\mathbf{x}_j)}{\\sigma^2} \\right),$$\n",
+    "and the distance function is often an $\\ell_p$-norm\n",
+    "$$d(\\mathbf{x}_i, \\mathbf{x}_j) = \\| \\mathbf{x}_i - \\mathbf{x}_j \\|_p$$\n",
+    "(of which the Euclidean distance is a special case with $p=2$)\n",
+    "or the cosine distance\n",
+    "$$d(\\mathbf{x}_i, \\mathbf{x}_j) = 1 - \\frac{\\langle \\mathbf{x}_i, \\mathbf{x}_j \\rangle}{\\|\\mathbf{x}_i\\|_2 \\|\\mathbf{x}_j\\|_2}.$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N, d = 300, 10\n",
+    "X = np.random.normal(size=(N, d))\n",
+    "G = graphs.NNGraph(X)\n",
+    "plt.hist(G.d);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.2 Exercise: graph layout\n",
     "\n",
     "Coordinates are sometimes given, e.g. if the graph is a road network as above. If it's not the case, e.g. because we just have an adjacency matrix, we must assign coordinates before plotting in 2 or 3 dimension.\n",
     "\n",
