--- a/demos/08_pygsp.ipynb
+++ b/demos/08_pygsp.ipynb
@@ -10,6 +10,22 @@
     "For this tutorial, we'll use the [PyGSP](https://github.com/epfl-lts2/pygsp), a Python package to ease signal processing on graphs.\n",
     "The PyGSP facilitates a wide variety of operations on graphs, like computing their Fourier basis, filtering or interpolating signals, plotting graphs, signals, and filters. The package includes a wide range of graphs and many filter banks. Despite all the pre-defined models, you can easily use a custom graph by defining its adjacency matrix, and a custom filter bank by defining a set of functions in the spectral domain.\n",
     "\n",
+    "For this tutorial we'll define a graph\n",
+    "$\n",
+    "\\newcommand{\\x}{\\mathbf{x}}\n",
+    "\\newcommand{\\W}{\\mathbf{W}}\n",
+    "\\newcommand{\\D}{\\mathbf{D}}\n",
+    "\\newcommand{\\I}{\\mathbf{I}}\n",
+    "\\renewcommand{\\L}{\\mathbf{L}}\n",
+    "\\newcommand{\\G}{\\mathcal{G}}\n",
+    "\\newcommand{\\V}{\\mathcal{V}}\n",
+    "\\newcommand{\\E}{\\mathcal{E}}\n",
+    "\\newcommand{\\R}{\\mathbb{R}}\n",
+    "\\DeclareMathOperator*{\\argmin}{arg\\,min}\n",
+    "\\G = (\\V, \\E, \\W)\n",
+    "$\n",
+    "as a set of nodes $\\V$, a set of edges $\\E$ and a weighted adjacency matrix $\\W \\in \\R^{N \\times N}$, $N = |\\V|$.\n",
+    "\n",
     "You will first need to install it with:"
    ]
   },
@@ -236,7 +252,7 @@
    "outputs": [],
    "source": [
     "fig, axes = plt.subplots(1, 2)\n",
-    "_ = axes[0].spy(G.W, markersize=0.5)\n",
+    "axes[0].spy(G.W, markersize=0.5)\n",
     "G.set_coordinates('community2D')\n",
     "G.plot(ax=axes[1])"
    ]
@@ -245,7 +261,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can use the combinatorial Laplacian $L = D - W$."
+    "We can use the combinatorial Laplacian $\\L = \\D - \\W$."
    ]
   },
   {
@@ -265,7 +281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Or the normalized Laplacian $L = I - D^{-1/2} W D^{-1/2}$."
+    "Or the normalized Laplacian $\\L = \\I - \\D^{-1/2} \\W \\D^{-1/2}$."
    ]
   },
   {
@@ -287,7 +303,7 @@
    "source": [
     "## 3 Graph signals\n",
     "\n",
-    "A graph signal $x: \\mathcal{V} \\rightarrow \\mathbb{R}$ can be seen as a vector $x \\in \\mathbb{R}^N$, where $N = |\\mathcal{V}|$ is the number of nodes.\n",
+    "A graph signal $x: \\V \\rightarrow \\R$ can be seen as a vector $\\x \\in \\R^N$, where $N = |\\V|$ is the number of nodes.\n",
     "\n",
     "Let's first create a random signal and visualize it on the graph."
    ]
@@ -314,14 +330,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1 Smoothness"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Is it smooth? Our intuition certainly says no. Let's verify by computing $$x^T L x = \\sum_{i \\sim j} W_{ij} (x_i - x_j)^2$$"
+    "### 3.1 Smoothness\n",
+    "\n",
+    "Is it smooth? Our intuition certainly says no. Let's verify by computing $$\\| \\nabla_\\G \\x \\|_2^2 = \\x^\\intercal \\L \\x = \\sum_{i \\sim j} \\W[i,j] (\\x[i] - \\x[j])^2$$"
    ]
   },
   {
@@ -391,7 +402,7 @@
     "### 3.2 Exercise\n",
     "\n",
     "What is the smoothest non-trivial signal?\n",
-    "$$\\min_x x^T L x, \\text{ s.t. } x \\neq 0 \\text{ and } x^T D^{1/2}1 = 0$$"
+    "$$\\argmin_{\\x \\in \\R^N} \\x^\\intercal \\L \\x, \\ \\text{ s.t. } \\ \\x \\neq 0 \\ \\text{ and } \\ \\x^\\intercal \\D^{1/2}1 = 0$$"
    ]
   },
   {
