demo 8: wording & notation

--- a/demos/08_pygsp.ipynb
+++ b/demos/08_pygsp.ipynb
@@ -13,14 +13,17 @@
     "For this tutorial we'll define a graph\n",
     "$\n",
     "\\newcommand{\\x}{\\mathbf{x}}\n",
+    "\\newcommand{\\y}{\\mathbf{y}}\n",
     "\\newcommand{\\W}{\\mathbf{W}}\n",
     "\\newcommand{\\D}{\\mathbf{D}}\n",
     "\\newcommand{\\I}{\\mathbf{I}}\n",
     "\\renewcommand{\\L}{\\mathbf{L}}\n",
+    "\\newcommand{\\U}{\\mathbf{U}}\n",
     "\\newcommand{\\G}{\\mathcal{G}}\n",
     "\\newcommand{\\V}{\\mathcal{V}}\n",
     "\\newcommand{\\E}{\\mathcal{E}}\n",
     "\\newcommand{\\R}{\\mathbb{R}}\n",
+    "\\newcommand{\\g}{\\hat{g}}\n",
     "\\DeclareMathOperator*{\\argmin}{arg\\,min}\n",
     "\\G = (\\V, \\E, \\W)\n",
     "$\n",
@@ -215,7 +218,7 @@
    "outputs": [],
    "source": [
     "communities = [50, 120, 80]\n",
-    "G = graphs.Community(N=250, Nc=3, comm_sizes=communities)"
+    "G = graphs.Community(N=250, Nc=3, comm_sizes=communities, seed=1)"
    ]
   },
   {
@@ -401,8 +404,9 @@
    "source": [
     "### 3.2 Exercise\n",
     "\n",
-    "What is the smoothest non-trivial signal?\n",
-    "$$\\argmin_{\\x \\in \\R^N} \\x^\\intercal \\L \\x, \\ \\text{ s.t. } \\ \\x \\neq 0 \\ \\text{ and } \\ \\x^\\intercal \\D^{1/2}1 = 0$$"
+    "Find the smoothest non-trivial signal\n",
+    "$$\\argmin_{\\x \\in \\R^N} \\x^\\intercal \\L \\x, \\ \\text{ s.t. } \\ \\x \\neq \\mathbf{0} \\ \\text{ and } \\ \\x^\\intercal \\D^{1/2} \\mathbf{1} = 0,$$\n",
+    "where $\\mathbf{0}$ denotes the vector of all zeroes, and $\\mathbf{1}$ the vector of all ones. The first constraint prevents the solution to be the zero vector, while the second constraint forces it to be orthogonal to the first eigenvector. The first eigenvector is $\\frac{1}{N} \\mathbf{1}$ for the combinatorial Laplacian and $\\D^{1/2} \\mathbf{1}$ for the normalized Laplacian."
    ]
   },
   {
@@ -456,9 +460,9 @@
    "source": [
     "## 4 Fourier basis\n",
     "\n",
-    "The PyGSP allows to compute the Fourier basis with the `compute_fourier_basis()` method. Remember that this involves the full eigendecomposition of the Laplacian which costs $\\mathcal{O}(N^3)$ in general.\n",
+    "The PyGSP allows to compute the Fourier basis $\\U$ with the `compute_fourier_basis()` method. Remember that this involves the full eigendecomposition of the Laplacian $\\L = \\U \\mathbf{\\Lambda} \\U^\\intercal$ which costs $\\mathcal{O}(N^3)$ operations in general.\n",
     "\n",
-    "As expected, the GFT on a ring graph is equal to classical Fourier modes."
+    "As expected, the Fourier basis of a ring graph is equal to classical Fourier modes:"
    ]
   },
   {
@@ -474,7 +478,8 @@
     "G.plot_signal(G.U[:, 4], ax=axes[0])\n",
     "\n",
     "G.set_coordinates('line1D')\n",
-    "G.plot_signal(G.U[:, 1:4], ax=axes[1])"
+    "G.plot_signal(G.U[:, 1:4], ax=axes[1])\n",
+    "axes[1].legend(['u_{}'.format(i) for i in range(1, 4)]);"
    ]
   },
   {
@@ -506,12 +511,12 @@
    "source": [
     "### 4.2 Graph Fourier Transform\n",
     "\n",
-    "The graph Fourier transform (GFT) of a signal $x$ is given by\n",
-    "$$\\hat{x} = U^T x,$$\n",
+    "The graph Fourier transform (GFT) of a signal $\\x$ is given by\n",
+    "$$\\hat{\\x} = \\U^\\intercal \\x,$$\n",
     "where $U$ is the graph Fourier basis.\n",
     "\n",
     "The inverse Fourier transform is given by\n",
-    "$$x = U \\hat{x}.$$\n",
+    "$$\\x = \\U \\hat{\\x}.$$\n",
     "\n",
     "The intuition about the smoothness of a signal and its representation in the spectral domain again transfers from classical Fourier analysis. Look a the below figures."
    ]
@@ -552,11 +557,14 @@
    "source": [
     "## 5 Filtering\n",
     "\n",
-    "A graph signal is filterd as\n",
-    "$$y = U g(\\Lambda) U^T x = g(L) x,$$\n",
-    "where $g$ is the filter kernel.\n",
+    "A graph signal $\\x$ is filtered as\n",
+    "$$\\y = \\U \\g(\\mathbf{\\Lambda}) \\U^\\intercal \\x = \\g(\\U \\mathbf{\\Lambda} \\U^\\intercal) \\x = \\g(\\L) \\x,$$\n",
+    "where $\\g$ is the filter kernel.\n",
     "\n",
-    "In general, we try to avoid the need to compute the Fourier basis by defining filters as polynomials of the graph Laplacian. As long as you can specify your filter $g(\\cdot)$ as a continuous function of the eigenvalues $\\lambda$, the PyGSP will take care of computing the coefficients of the best approximating [Chebyshev polynomials](https://en.wikipedia.org/wiki/Chebyshev_polynomials)."
+    "In general, we try to avoid the need to compute the Fourier basis by defining filters as polynomials of the graph Laplacian, i.e.\n",
+    "$$\\g(\\L) = \\sum_{k=0}^K \\theta_k \\L^k.$$\n",
+    "\n",
+    "As long as you can specify your filter $\\g(\\cdot)$ as a continuous function of the eigenvalues $\\lambda$, the PyGSP will take care of computing the coefficients of the best approximating [Chebyshev polynomials](https://en.wikipedia.org/wiki/Chebyshev_polynomials)."
    ]
   },
   {
@@ -605,14 +613,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.1 Exercise\n",
+    "### 5.1 Exercise: analysis and synthesis\n",
     "\n",
-    "Look at the below code where we analyze a delta signal with two filter banks (`filters.MexicanHat` and `filters.Itersine`) and reconstruct it. How do you explain the difference in reconstruction error?\n",
+    "Some tasks in [signal processing](https://en.wikipedia.org/wiki/Signal_processing), for example compression or coding, involves the analysis (the decomposition) of a signal $\\x_1 \\in \\R^N$ with a [filter bank](https://en.wikipedia.org/wiki/Filter_bank), i.e. a set of $N_f$ filters. We can see it as the decomposition of the signal into a set of $N_f$ signals $\\x_2 \\in \\R^{N \\times N_f}$, each being a response to a filter extracting a particular feature (e.g. a frequency band or a particular 2D texture). On the other end, we want to reconstruct the signal $\\x_3 \\in \\R^N$ from $\\x_2$, after possibly a transmission or compression. Our goal is to minimize some reconstruction error $d(\\x_3, \\x_1)$. The error could for example be the perceived visual loss for image compression.\n",
     "\n",
-    "**Your answer here.**\n",
+    "Look at the below code, where $\\x_1 = \\delta_{13}$. We analyze it with two filter banks (`filters.MexicanHat` and `filters.Itersine`) of `Nf=4` filters and then synthesize $\\x_3$. How do you explain the difference in reconstruction error $d(\\x_3, \\x_1) = \\| \\x_1 - \\x_3 \\|_2$ between both filter banks?\n",
     "\n",
     "Hints:\n",
-    "* Look at the filters in the spectral domain."
+    "* Look at the frequency response of the filter banks."
    ]
   },
   {
@@ -635,8 +643,17 @@
    "source": [
     "g = filters.MexicanHat(G, Nf=4)\n",
     "s2 = g.analyze(s1)\n",
-    "s2 = g.synthesize(s2)\n",
-    "np.linalg.norm(s1 - s2)"
+    "s3 = g.synthesize(s2)\n",
+    "np.linalg.norm(s1 - s3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here."
    ]
   },
   {
@@ -647,8 +664,24 @@
    "source": [
     "g = filters.Itersine(G, Nf=4)\n",
     "s2 = g.analyze(s1)\n",
-    "s2 = g.synthesize(s2)\n",
-    "np.linalg.norm(s1 - s2)"
+    "s3 = g.synthesize(s2)\n",
+    "np.linalg.norm(s1 - s3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Your answer here.**"
    ]
   }
  ],
